# iceoryx-gateway-dds

./: CMakeLists.txt  NOTICE.md  README.md
.github/workflows/: build.yml
cmake/: Config.cmake.in
cmake/fastdds/: CMakeLists.txt  fastcdr.cmake.in  fastdds.cmake.in  fastddsgen.cmake.in  foonathan_memory_vendor.cmake.in
include/iceoryx_dds/dds/: cyclone_data_reader.hpp  cyclone_data_writer.hpp  data_reader.hpp  dds_types.hpp  fast_context.hpp  fast_data_reader.hpp  fast_data_writer.hpp  iox_chunk_datagram_header.hpp
include/iceoryx_dds/gateway/: dds_to_iox.hpp  iox_to_dds.hpp
include/iceoryx_dds/internal/gateway/: dds_to_iox.inl  iox_to_dds.inl
source/gateway/: main.cpp
source/iceoryx_dds/dds/: cyclone_data_reader.cpp  cyclone_data_writer.cpp  fast_context.cpp  fast_data_reader.cpp  fast_data_writer.cpp  iox_chunk_datagram_header.cpp
test/: CMakeLists.txt
test/helpers/: fixture_dds_gateway.hpp
test/mocks/: google_mocks.hpp
test/moduletests/: test_cyclone_data_reader.cpp  test_dds_to_iox.cpp  test_fast_data_reader.cpp  test_iox_to_dds.cpp
